--- a/Css/app.css
+++ b/Css/app.css
@@ -15,7 +15,7 @@
   /* Tipografía para titulares */
   --font-family-poppins: Poppins, Roboto, Arial, sans-serif;
   
-  /* Tipografía textos */
+  /* Tipografía texto */
   --font-family-raleway: Raleway, Roboto, Arial, sans-serif;
 }
 
@@ -47,6 +47,11 @@
 
 .text--g-medium {
     color: var(--g-medium);
+    transition: all linear 0.2s;
+}
+
+.text--g-medium:hover {
+    color: var(--g-dark)
 }
 
 .text--g-light {
@@ -59,6 +64,10 @@
 
 .text--o-light {
     color: var(--o-light);
+}
+
+.text--o-light:hover {
+    color: var(--o-dark);
 }
 
 /* Familias tipográficas */
@@ -75,5 +84,24 @@ body {
     font-family: var(--font-family-raleway);
     /* Se estable la media de 1 rem en 16px */
     font-size: 16px;
+    background-image: url(../Img/bg_0022.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-poppins)
+}
+
+.btn--g-medium{
+    color: #FFFFFF;
+    background: var(--g-medium);
+    border-color: var(--g-medium);
+}
+
+.btn--g-medium:hover {
+    color: #FFFFFF;
+    background: var(--g-dark);
+    border-color: var(--g-medium);
 }
 
