Validación de todos los formulario de acceso, login y recuperación de contraseña, se ha validado con JS, patrones html y también validamos el tamaño y la extensión de la imagen.

--- a/Css/app.css
+++ b/Css/app.css
@@ -105,3 +105,6 @@ h1, h2, h3, h4, h5, h6 {
     border-color: var(--g-medium);
 }
 
+/* Diseño campos de formualarios para errores y correctos los reutilizaremos en
+ * todos los furmularios
+ */
