Continuación de home

--- a/Css/app.css
+++ b/Css/app.css
@@ -110,14 +110,24 @@ h1, h2, h3, h4, h5, h6 {
 #dashboard {
     width: 100%;
 }
+
 #sidebar{
-    min-width: 230px;
-    max-width: 230px;
+    min-width: 280px;
+    max-width: 280px;
     transition: all linear 0.2s;  
 }
 
-#sidebar nav {
-    position: fixed;
+#sidebar li {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+#sidebar a {
+    color: #ffffff;
+}
+
+#sidebar.active {
+    margin-left: -280px;
 }
 
 #content {
