--- a/Css/app.css
+++ b/Css/app.css
@@ -136,3 +136,29 @@ h1, h2, h3, h4, h5, h6 {
     min-height: 100vh;
     transition: all linear 0.2s;
 }
+
+/* Utilidades */
+.mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all .15s ease;
+}
+
+.bg-gradient-default {
+    background: linear-gradient(87deg, var(--g-dark) 0, var(--g-medium) 100%) !important;
+}
+
+.opacity-8 {
+    opacity: 0.8;
+}
+
+/* Imagenes de fondo de los header de las paginas */
+/* Pagina pefil */
+.header-home {
+    background-image: url(../Img/bg_001.jpg);
+    background-size: cover; 
+    background-position: center center;
+}
