Implementacion de un boton para hacer top scroll en todas las paginas

--- a/Css/app.css
+++ b/Css/app.css
@@ -6,17 +6,17 @@
 /*** Definicion de variables ***/
 :root {
     /* Colores */
-  --g-dark: #16594A;
-  --g-medium: #12928E;
-  --g-light: #97CECC;
-  --o-dark: #C4421A;
-  --o-light: #F98f45;
-  
-  /* Tipografía para titulares */
-  --font-family-poppins: Poppins, Roboto, Arial, sans-serif;
-  
-  /* Tipografía texto */
-  --font-family-raleway: Raleway, Roboto, Arial, sans-serif;
+    --g-dark: #16594A;
+    --g-medium: #12928E;
+    --g-light: #97CECC;
+    --o-dark: #C4421A;
+    --o-light: #F98f45;
+
+    /* Tipografía para titulares */
+    --font-family-poppins: Poppins, Roboto, Arial, sans-serif;
+
+    /* Tipografía texto */
+    --font-family-raleway: Raleway, Roboto, Arial, sans-serif;
 }
 
 /* Colores de Fondo*/
@@ -214,5 +214,35 @@ position: absolute;
     display: inline-block;
     position: relative;
     z-index: 20;
+    color: var(--o-dark);
+}
+
+/* Boton para hacer scroll al inicio de la pagina */
+#topScroll{
+    width: 50px; 
+    height: 50px;
+    padding: 10px; 
+    border: 1px solid #fff;
+    border-radius: 5px;
+    text-align: center; 
+    font-weight: bold;
+    color: #444;
+    text-decoration: none;
+    position: fixed;
+    bottom: 30px;
+    display: none;
+    left: 30px;
+}
+
+#topScroll svg {
+    margin-left: 0 !important; /* He tenido que usar el important, era imposible acceder por especificidad */
+}
+
+#topScroll:hover{
+    background-color: #fff;
+    text-decoration:none;
+}
+
+#topScroll:hover svg{
     color: var(--o-dark);
 }
